// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@universal-labs/styled > View render 1`] = `
<View
  className="flex-1"
  groupID=":r0:"
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
/>
`;

exports[`@universal-labs/styled > View render 2`] = `
<View
  className="flex-1"
  groupID=":r1:"
  style={
    {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
/>
`;
